apps-old/loki/envs/homelab/ingress.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: loki
  namespace: loki
  labels:
    app.kubernetes.io/name: loki
spec:
  parentRefs:
    - name: homelab-gateway
      namespace: ingress
  hostnames:
    - loki.elposhox.dev
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: loki
          port: 3100
